<resources>
    <string name="app_name">Wi-fi Clipboard</string>
    <string name="connection_status">Connection Status</string>
    <string name="main_icon">Main Icon</string>
    <string name="server_address">Server Address</string>
    <string name="app_usage">\nPlace the widget associated with this app on your homescreen.\n\nNext, use the included python script / executable to send data from a locally connected device to this app.\nMake sure you have copied the text you want to send.\n\nAny received text will then be place on your device\'s clipboard.\n\nTap the icon twice to cancel.</string>
    <string name="App_Title">Wi-fi Clipboard</string>
    <string name="usage">Usage</string>
    <string name="settings">Settings</string>
    <string name="timeout_ms">Timeout (ms)</string>
    <string name="port_number">Port Number</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="enable_toasts">Enable toast notifications</string>
    <string name="port">Port</string>
    <string name="app_icon">App Icon</string>
    <string name="placeholder_ip">xxx.xxx.xxx.xxx:xxxx</string>
</resources>